--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".dashboard.Feedback">
+    tools:context=".dashboard.MyProfileDashBoard">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
